--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Currency Spy</string>
     <string name="currency_rates_fetching_error">An error occurred!</string>
     <string name="currency_rates_fetching_retry_button">Retry</string>
+    <string name="currency_rate_header_today">Today</string>
+    <string name="currency_rate_header_yesterday">Yesterday</string>
+    <string name="currency_rate_price">%1s %2$s</string>
 </resources>
