--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
     <string name="app_name">Currency Spy</string>
-    <string name="currency_rates_fetching_error">An error occurred!</string>
-    <string name="currency_rates_fetching_retry_button">Retry</string>
+    <string name="currency_rates_title">Let\'s track rates history!</string>
+    <string name="currency_rates_fetching_error">An error occurred! Click to retry.</string>
+    <string name="currency_rates_fetching_loading">Loading next day rates…</string>
     <string name="currency_rate_header_today">Today</string>
     <string name="currency_rate_header_yesterday">Yesterday</string>
     <string name="currency_rate_price">%1s %2$s</string>
+    <string name="currency_rate_base_currency">1 %s</string>
 </resources>
